# Automotiv-test-task

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg  Тестовое для Python Full-stack developer .docx
.github/workflows/: python-package.yml
app/: __init__.py  main.py
app/config/: __init__.py  app_config.py
app/db/: database.py  models.py  repositories.py
app/routes/: __init__.py  history_route.py  pc_data_route.py
app/services/: __init__.py  history.py  pc_data.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: pc_stats.js  timer.js  websockets.js
app/tests/: __init__.py  conftest.py
app/tests/test_routes/: test_history_route.py  test_pc_data_route.py
app/tests/tests_db/: test_repositories.py
app/tests/tests_services/: __init__.py  test_pc_data.py
app/tests/tests_utils/: __init__.py  test_human_readable.py
app/utils/: __init__.py  human_readable.py
templates/: base.html  history.html  index.html
